Fix visability on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -18,13 +18,6 @@ body {
     height: 100vh;
 }
 
-header,
-main,
-aside,
-footer {
-    border: 2px dotted orange;
-}
-
 header {
     grid-area: header;
 
@@ -77,7 +70,7 @@ header img {
 
 
 
-@media (max-width: 568px) {
+@media (max-width: 768px) {
     .container {
       grid-template-areas:
         "header"
@@ -88,12 +81,12 @@ header img {
       grid-template-columns: 1fr;
       grid-template-rows:
         auto /* Header */
-        1fr /* Aside (graphs) */
-        1fr /* Main (table) */
+        2fr /* Aside (graphs) */
+        3fr /* Main (table) */
         auto; /* Footer */
     }
   
-    aside {
+    main, aside {
       margin: 0;
     }
-  }
+}
