--- a/css/table.css
+++ b/css/table.css
@@ -39,11 +39,11 @@
 .xsolla-table td:before {
     content: attr(data-th) ": ";
     font-weight: bold;
-    width: 15em;
+    width: 10em;
     display: inline-block;
 }
 
-@media (min-width: 568px) {
+@media (min-width: 768px) {
     .xsolla-table td:before {
         display: none;
     }
@@ -55,7 +55,7 @@
     margin: 0 auto;
 }
 
-@media (min-width: 568px) {
+@media (min-width: 768px) {
     .xsolla-table th,
     .xsolla-table td {
         display: block;
